--- a/Exercise3/style.css
+++ b/Exercise3/style.css
@@ -1,8 +1,21 @@
 body{
     background-color: lightgray;
+    text-align: center;
 }
 
 
+form{
+    display: inline-block;
+    padding: 10px;
+    border: 4px solid black;
+}
+
+label{
+ 
+}
+input{
+    margin: 2px;
+}
 table, th, td {
     border: 1px solid black;
 }
